--- a/src/components/common/Card/Card.module.scss
+++ b/src/components/common/Card/Card.module.scss
@@ -1,12 +1,85 @@
 .card {
   border-radius: 10px;
-  height: 400px;
+  height: 350px;
   position: relative;
-  margin-bottom: 56px;
+  margin-bottom: 16px;
+  box-shadow: 3px 5px 12px #e7e7e785;
+  &__domestic {
+    height: auto;
+    padding-bottom: 16px;
+  }
   img {
     border-radius: 10px;
-
     height: inherit;
+  }
+  .thumbnailWrap {
+    position: relative;
+    margin-bottom: 32px;
+    img {
+      width: 100%;
+    }
+    .date {
+      display: flex;
+      font-weight: 600;
+      font-size: 16px;
+      text-transform: capitalize;
+      color: #fff;
+      background: #f26f49;
+      border-radius: 24px;
+      position: absolute;
+      padding: 9px 24px;
+      bottom: -20px;
+      left: 20px;
+      span {
+        display: flex;
+        align-items: center;
+        img {
+          width: 20px;
+          height: 20px;
+        }
+      }
+    }
+  }
+  .info {
+    padding: 4px 16px 16px 16px;
+    .titleCard {
+      font-weight: 600;
+      font-size: 18px;
+      line-height: 1;
+      margin-bottom: 10px;
+    }
+    .departure {
+      font-size: 14px;
+      margin-bottom: 42px;
+    }
+    .footerCard {
+      display: flex;
+      gap: 32px;
+      .cta {
+        button {
+          font-weight: 600;
+          font-size: 15px;
+          text-transform: uppercase;
+          color: #262626;
+          background: #fff;
+          border: 1px solid #fdc300;
+          box-sizing: border-box;
+          border-radius: 5px;
+          padding: 8px 10px;
+          transition: all 0.3s;
+        }
+      }
+      .label {
+        font-size: 12px;
+      }
+      .priceNumber {
+        color: #ff4838;
+        font-weight: 600;
+        font-size: 17px;
+        line-height: 1;
+        padding: 0;
+      }
+    }
   }
   .wrapContent {
     position: absolute;
