--- a/styles/pages/Home.module.scss
+++ b/styles/pages/Home.module.scss
@@ -1,16 +1,41 @@
+@import "./../variable";
 .heroShot {
   position: relative;
-  margin-bottom: 64px;
+  margin-bottom: 42px;
   .wrap {
-    height: 100vh;
+    height: calc(100vh - 32px);
     display: flex;
-    background-color: lightgray;
-    .wrapLeft {
-      width: 50%;
+    img {
+      width: 100%;
+      height: 100vh;
+      object-fit: cover;
+      animation: zoomAnimation 4s infinite alternate;
+      transition: transform 2s;
     }
-    .wrapRight {
-      width: 50%;
+    .wrapInfo {
+      position: relative;
+      z-index: 9;
+      background-color: rgba(22, 43, 50, 1);
+      padding: 72px 42px 16px !important;
+      .mainTitle {
+        font-size: 72px;
+        color: $fourth;
+        font-weight: 600;
+        max-width: 400px;
+        line-height: 82px;
+        margin-bottom: 32px;
+      }
+      .subTitle {
+        color: #fff;
+      }
     }
+    // background-color: lightgray;
+    // .wrapLeft {
+    //   width: 50%;
+    // }
+    // .wrapRight {
+    //   width: 50%;
+    // }
   }
   .searchBox {
     box-shadow: 3px 4px 10px rgb(86 68 169/5%);
@@ -18,18 +43,47 @@
     padding: 15px 25px;
     position: relative;
     background-color: #fff;
-    bottom: 20px;
+    bottom: 50px;
+    z-index: 9;
     .filter {
+      border: 1px solid #e2e2e2;
+      box-sizing: border-box;
+      padding: 10px 15px;
       .icon {
       }
       .filterForm {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
         label {
+          font-weight: 600;
+          font-size: 16px;
+          color: #2d373c;
+          display: block;
+          margin-bottom: -2px;
         }
-        input {
-        }
+        // input {
+        //   height: 30px;
+        //   padding: 2px 8px;
+        //   border: none;
+        //   letter-spacing: 0.5px;
+        //   &:focus-visible {
+        //     outline: none;
+        //   }
+        // }
       }
     }
-    button {
+    .cta {
+      font-weight: 600;
+      font-size: 18px;
+      color: #fff;
+      border: none;
+      background: #ff4838;
+      display: block;
+      width: 100%;
+      height: 100%;
+      padding: 12px 24px;
+      transition: all 0.35s;
     }
   }
 }
@@ -51,12 +105,18 @@
 }
 
 .sliderList {
+  border-radius: 12px;
   .sliderItem {
-    border-radius: 12px;
     margin-bottom: 42px;
     height: 500px;
     width: 100%;
-    background-color: lightgray;
+    border-radius: 12px;
+    img {
+      border-radius: 12px;
+      height: 100%;
+      object-fit: cover;
+      background-repeat: no-repeat;
+    }
   }
 }
 
@@ -145,5 +205,17 @@
     font-style: italic;
     color: #9b9b9b;
     cursor: pointer;
+  }
+}
+
+@keyframes zoomAnimation {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.2);
   }
 }
