--- a/src/components/common/HeaderPage/HeaderPage.module.scss
+++ b/src/components/common/HeaderPage/HeaderPage.module.scss
@@ -1,5 +1,9 @@
 .headerPage {
-  margin-bottom: 62px;
+  margin-bottom: 24px;
+
+  @media (min-width: 768px) {
+    margin-bottom: 62px;
+  }
   height: 240px;
   padding: 80px 0;
   background-color: lightgray;
@@ -9,11 +13,12 @@
     text-align: center;
     font-weight: 600;
     font-size: 28px;
+    padding: 0 1rem 10px;
     @media (min-width: 768px) {
       font-size: 40px;
+      padding: 0 4rem 10px;
     }
     color: #fff;
-    padding: 0 4rem 10px;
     position: relative;
     z-index: 99;
   }
