--- a/styles/pages/ContactUs.module.scss
+++ b/styles/pages/ContactUs.module.scss
@@ -1,3 +1,5 @@
+@import "./../variable";
+
 .contactCollapsible {
   padding: 16px 24px;
   margin-bottom: 24px;
@@ -9,27 +11,36 @@
     font-weight: 600;
   }
 }
-.contactList {
-  .contactItem {
-    margin-bottom: 32px;
-    padding: 20px;
-    border-radius: 10px;
-    border: 1px solid #eee;
-    box-shadow: 3px 5px 35px rgba(86, 68, 169, 0.1);
-    .contactTitle {
-      color: #006d67;
-      font-weight: 700;
+.contactItem {
+  margin-bottom: 32px;
+  padding: 24px;
+  border-radius: 10px;
+  border: 1px solid #eee;
+  box-shadow: 3px 5px 35px rgba(86, 68, 169, 0.1);
+  .contactTitle {
+    color: #006d67;
+    font-weight: 700;
+    font-size: 24px;
+    margin-bottom: 4px;
+  }
+  .contactAddress {
+    .contactNumber {
       font-size: 18px;
-    }
-    .contactAddress {
       margin-bottom: 8px;
     }
-    .contactMe {
+    button {
+      background-color: $third;
+      border: none;
+      border-radius: 8px;
+      padding: 8px 24px;
+      color: #fff;
+      transition: all 0.3s;
+      &:hover {
+        transform: scale(1.05);
+      }
     }
-    .officeHours {
-      margin-top: 12px;
-    }
-    .dayOpen {
-    }
+  }
+  .contactMe {
+    margin-bottom: 36px;
   }
 }
